FormCurrencyInput: make the currency value editable
If the component has a `currencyList` prop (array of possible values), then make
the currency affix editable. The `onCurrencyChange` prop is a handler that gets
called when the currency is changed.

Implemented by overlaying a transparent, absolutely positioned `<select>` over the
affix. The same technique is already used to select the country code in the `PhoneInput`
component.

--- a/client/components/forms/form-currency-input/style.scss
+++ b/client/components/forms/form-currency-input/style.scss
@@ -1,3 +1,16 @@
 .form-currency-input {
 	-webkit-appearance: none;
 }
+
+.form-currency-input__select {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	padding: 0;
+	border: 0;
+	background-image: none;
+	opacity: 0;
+}
